name:                jsondirtreeR
version:             0.1.0.0
-- synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/stla/jsondirtreeR#readme
license:             BSD3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2017 Stéphane Laurent
category:            Dynamic linker
build-type:          Simple
extra-source-files:  README.md, StartEnd.c
cabal-version:       >=1.10

library
  hs-source-dirs:      src
-- ghc-options:
  exposed-modules:     JsonDirTreeR
  build-depends:       base >= 4.7 && < 5
--                     , containers
--                     , th-expand-syns
--                     , inline-r
                     , jsondirtree
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/jsondirtreeR
