name:                jsondirtreeR
version:             0.1.0.0
-- synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/stla/jsondirtreeR#readme
license:             BSD3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2017 Stéphane Laurent
category:            Dynamic linker
build-type:          Simple
extra-source-files:  README.md, StartEnd.c
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JsonDirTreeR
  build-depends:       base >= 4.7 && < 5
                     , jsondirtree
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -optl-no-pie

executable JsonDirTreeR
  hs-source-dirs:      src
  main-is:             JsonDirTreeR.hs
  build-depends:       base >= 4.7 && < 5
                     , jsondirtree
                     , bytestring
  default-language:    Haskell2010
  if os(windows)
    ghc-options:         -O2 -shared -fPIC StartEnd.c
  else
    ghc-options:         -no-hs-main -O2 -shared -fPIC -dynamic
    c-sources:           src/StartEnd.c
    extra-libraries:     HSrts-ghc8.0.2


source-repository head
  type:     git
  location: https://github.com/stla/jsondirtreeR
